--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -379,6 +379,7 @@
 	"mmorpg.spell.frost_trap": "Frost Trap",
 	"mmorpg.spell.frostball": "Ice Ball",
 	"mmorpg.spell.frozen_orb": "Frozen orb",
+	"mmorpg.spell.gale_wind": "Gale Wind",
 	"mmorpg.spell.gong_strike": "Gong Strike",
 	"mmorpg.spell.healing_aura": "Healing Aura",
 	"mmorpg.spell.heart_of_ice": "Heart of Ice",
@@ -505,6 +506,7 @@
 	"mmorpg.one_of_a_kind.frost_trap_mod": "Frost Trap Modifier",
 	"mmorpg.one_of_a_kind.frostball_mod": "Ice Ball Modifier",
 	"mmorpg.one_of_a_kind.frozen_orb_mod": "Frozen orb Modifier",
+	"mmorpg.one_of_a_kind.gale_wind_mod": "Gale Wind Modifier",
 	"mmorpg.one_of_a_kind.gong_strike_mod": "Gong Strike Modifier",
 	"mmorpg.one_of_a_kind.healing_aura_mod": "Healing Aura Modifier",
 	"mmorpg.one_of_a_kind.heart_of_ice_mod": "Heart of Ice Modifier",
@@ -573,6 +575,20 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"effect.mmorpg.beneficial.10": "Vigor",
@@ -604,20 +620,6 @@
 	"mmorpg.ailment.poison": "Poison",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1088,6 +1090,7 @@
 	"mmorpg.stat.armor_per_10_mana": "§a[VAL1] §9❈ Armor§7 per 10 §9☯ Mana§7",
 	"mmorpg.stat.arrow_cdr": "Arrow Spell Cooldown Reduction",
 	"mmorpg.stat.arrow_spell_dmg": "Arrow Damage",
+	"mmorpg.stat.attack_damage": "Attack Damage",
 	"mmorpg.stat.aura_effect": "Aura Effect",
 	"mmorpg.stat.axe_damage": "Axe Damage",
 	"mmorpg.stat.beast_cdr": "Beast Spell Cooldown Reduction",
@@ -1521,6 +1524,85 @@
 "_comment": " [CATEGORY]: CURRENCY ITEMS - DESCRIPTIONS",
 
 
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
+
+	"spell.desc.arrow_barrage": "Shoot out many arrows in a single line, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
+	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
+	"spell.desc.arrow_totem": "Summons a totem that rapidly shoots arrows dealing [calc:arrow_totem] §6☀ Physical§7 Damage",
+	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
+	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
+	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§5☀ Chaos§7 Damage when it expires.",
+	"spell.desc.boomerang": "Strike enemies with a projectile that deals [calc:boomerang] §6☀ Physical§7 Damage",
+	"spell.desc.chain_lightning": "Strike enemies with chaining lightning that deals [calc:lightning_spear] §e☀ Lightning§7 Damage",
+	"spell.desc.chaos_totem": "Summons a totem creates meteors dealing [calc:chaos_totem] §5☀ Chaos§7 Damage",
+	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
+	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
+	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
+	"spell.desc.chilling_touch": "Strike enemies in front for [calc:chilling_touch] §b☀ Cold§7 Damage and command your summons to attack them.",
+	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §5☀ Chaos§7 Damage",
+	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §5☀ Chaos§7 Damage",
+	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §5☀ Chaos§7 Damage",
+	"spell.desc.dash": "Dash in your direction and gain slowfall.",
+	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
+	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
+	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
+	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
+	"spell.desc.fire_nova": "Explode with frost around you, dealing [calc:fire_nova] §b☀ Cold§7 Damage to nearby enemies.",
+	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage in area around itself.",
+	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
+	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
+	"spell.desc.frost_flower": "Summon a freezing flower that deals [calc:flower_flower] §b☀ Cold§7 Damage every second.",
+	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
+	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage in area around itself.",
+	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
+	"spell.desc.frozen_orb": "Throw out a frozen orb, slowly moving towards enemies and  dealing [calc:iceball] §b☀ Cold§7 Damage",
+	"spell.desc.gale_wind": "Summons multiple clouds, knocking back and dealing [calc:gale_wind] §6☀ Physical§7 Damage",
+	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
+	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
+	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
+	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
+	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
+	"spell.desc.lightning_nova": "Deal [calc:lightning_nova] §e☀ Lightning§7 Damage to nearby enemies.",
+	"spell.desc.lightning_spear": "Throw out spear dealing [calc:lightning_spear] §e☀ Lightning§7 Damage",
+	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
+	"spell.desc.magma_flower": "Summon a flaming flower that deals [calc:magma_flower]§c☀ Fire§7 Damage every second.",
+	"spell.desc.make_arrows": "Produce a stack of arrows.",
+	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
+	"spell.desc.nature_balm": "Gives buff to allies nearby:",
+	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
+	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
+	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage in area around itself.",
+	"spell.desc.power_chord": "Throw out a ball of music, dealing [calc:power_chord] §6☀ Physical§7 Damage",
+	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
+	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
+	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
+	"spell.desc.resonance": "Throw out a ball of music, dealing [calc:power_chord] §6☀ Physical§7 Damage and causing an explosion if the 2nd projectile hits too.",
+	"spell.desc.return_summons": "Summons your pets and heals them for [calc:healing_aura] health",
+	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
+	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
+	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
+	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
+	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
+	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
+	"spell.desc.summon_cold_golem": "Summon a Golem to aid you in combat. Sometimes casts an AOE spell",
+	"spell.desc.summon_fire_golem": "Summon a Golem to aid you in combat. Sometimes casts an AOE spell",
+	"spell.desc.summon_lightning_golem": "Summon a Golem to aid you in combat. Sometimes casts an AOE spell",
+	"spell.desc.summon_skeleton_army": "Summons many skeletons for a short duration",
+	"spell.desc.summon_spirit_wolf": "Summon a Spirit Wolf to aid you in combat.",
+	"spell.desc.summon_zombie": "Summon a Pet Zombie, don't worry, it's cute!",
+	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
+	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
+	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
+	"spell.desc.thorn_bush": "Summon a thorny bush that deals [calc:thorn_bush]§5☀ Chaos§7 Damage every second.",
+	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
+	"spell.desc.undying_will": "Gives buff to self.",
+	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
+	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
+	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
+
+"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
+
+
 "_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
 
 	"mmorpg.stat_desc.accuracy": "Increases your chance to hit, low accuracy also causes crits to fail. Specifically it decreases opponent's chance to dodge",
@@ -1539,6 +1621,7 @@
 	"mmorpg.stat_desc.armor": "Decreases physical damage taken by a percent",
 	"mmorpg.stat_desc.armor_penetration": "Ignores x armor",
 	"mmorpg.stat_desc.arrow_cdr": "Reduces spell cooldown of spells with the tag.",
+	"mmorpg.stat_desc.attack_damage": "Increases all attack damage.",
 	"mmorpg.stat_desc.aura_effect": "Increases stats your auras give you by %",
 	"mmorpg.stat_desc.axe_damage": "Increases damage done if it was caused by that weapon",
 	"mmorpg.stat_desc.beast_cdr": "Reduces spell cooldown of spells with the tag.",
@@ -1693,85 +1776,7 @@
 	"mmorpg.stat_desc.water_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.weapon_damage": "Used for certain spells",
 
-"_comment": " [CATEGORY]: STATS - DESCRIPTIONS",
-
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS",
-
-	"spell.desc.arrow_barrage": "Shoot out many arrows in a single line, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
-	"spell.desc.arrow_storm": "Shoot out arrows in an arc, dealing [calc:arrow_storm] §6☀ Physical§7 Damage",
-	"spell.desc.arrow_totem": "Summons a totem that rapidly shoots arrows dealing [calc:arrow_totem] §6☀ Physical§7 Damage",
-	"spell.desc.astral_totem": "Summon a totem which restores [calc:totem_mana] mana to allies around it.",
-	"spell.desc.awaken_mana": "Restores [calc:awaken_mana] mana.",
-	"spell.desc.black_hole": "Summon a dark sphere that attracts nearby enemies to it, dealing [calc:black_hole]§5☀ Chaos§7 Damage when it expires.",
-	"spell.desc.boomerang": "Strike enemies with a projectile that deals [calc:boomerang] §6☀ Physical§7 Damage",
-	"spell.desc.chain_lightning": "Strike enemies with chaining lightning that deals [calc:lightning_spear] §e☀ Lightning§7 Damage",
-	"spell.desc.chaos_totem": "Summons a totem creates meteors dealing [calc:chaos_totem] §5☀ Chaos§7 Damage",
-	"spell.desc.charge": "Charge in a direction, stopping upon first enemy hit to deal [calc:charge] §6☀ Physical§7 Damage in radius.",
-	"spell.desc.charged_bolt": "Shoot a charged arrow that goes through enemies and deals [calc:charged_bolt] §6☀ Physical§7 Damage in radius and slows.",
-	"spell.desc.chilling_field": "Freeze area of sight, damaging enemies for [calc:chilling_field]§b☀ Cold§7 Damage every second.",
-	"spell.desc.chilling_touch": "Strike enemies in front for [calc:chilling_touch] §b☀ Cold§7 Damage and command your summons to attack them.",
-	"spell.desc.curse_of_agony": "Curse enemies with Curse of Agony and deal [calc:curse] §5☀ Chaos§7 Damage",
-	"spell.desc.curse_of_despair": "Curse enemies with Curse of Despair and deal [calc:curse] §5☀ Chaos§7 Damage",
-	"spell.desc.curse_of_weak": "Curse enemies with Curse of Weakness and deal [calc:curse] §5☀ Chaos§7 Damage",
-	"spell.desc.dash": "Dash in your direction and gain slowfall.",
-	"spell.desc.draconic_blood": "Gives effect to nearby allies.",
-	"spell.desc.entangling_seed": "Throw out a seed that explodes and petrifies enemies.",
-	"spell.desc.execute": "Slash enemies in front of you for [calc:execute] §6☀ Physical§7 Damage",
-	"spell.desc.explosive_arrow": "Shoot an arrow that does [calc:explosive_arrow] §6☀ Physical§7 Damage around it",
-	"spell.desc.fire_nova": "Explode with frost around you, dealing [calc:fire_nova] §b☀ Cold§7 Damage to nearby enemies.",
-	"spell.desc.fire_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§c☀ Fire§7 Damage in area around itself.",
-	"spell.desc.fireball": "Throw out a ball of fire, dealing [calc:fireball] §c☀ Fire§7 Damage",
-	"spell.desc.flame_strike": "Strike enemies in front for [calc:flame_strike] §c☀ Fire§7 Damage",
-	"spell.desc.frost_flower": "Summon a freezing flower that deals [calc:flower_flower] §b☀ Cold§7 Damage every second.",
-	"spell.desc.frost_nova": "Explode with frost around you, dealing [calc:frost_nova] §b☀ Cold§7 Damage to nearby enemies.",
-	"spell.desc.frost_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§b☀ Cold§7 Damage in area around itself.",
-	"spell.desc.frostball": "Throw out a ball of ice, dealing [calc:iceball] §b☀ Cold§7 Damage",
-	"spell.desc.frozen_orb": "Throw out a frozen orb, slowly moving towards enemies and  dealing [calc:iceball] §b☀ Cold§7 Damage",
-	"spell.desc.gong_strike": "Bash enemies around you for [calc:gong_strike] §6☀ Physical§7 Damage",
-	"spell.desc.healing_aura": "Heal allies around you for [calc:healing_aura] health",
-	"spell.desc.heart_of_ice": "Heal allies around you for [calc:heart_of_ice] health",
-	"spell.desc.hunter_potion": "Drink a potion, healing you for [calc:hunter_pot_heal] health",
-	"spell.desc.ice_comet": "Summon a meteor that falls from the sky, dealing [calc:ice_comet] §b☀ Cold§7 Damage",
-	"spell.desc.lightning_nova": "Deal [calc:lightning_nova] §e☀ Lightning§7 Damage to nearby enemies.",
-	"spell.desc.lightning_spear": "Throw out spear dealing [calc:lightning_spear] §e☀ Lightning§7 Damage",
-	"spell.desc.mage_circle": "Summon a Magic Circle. Standing in it provides you a buff. After a certain duration you will be teleported to its location.",
-	"spell.desc.magma_flower": "Summon a flaming flower that deals [calc:magma_flower]§c☀ Fire§7 Damage every second.",
-	"spell.desc.make_arrows": "Produce a stack of arrows.",
-	"spell.desc.meteor": "Summon a meteor that falls from the sky, dealing [calc:meteor] §c☀ Fire§7 Damage",
-	"spell.desc.nature_balm": "Gives buff to allies nearby:",
-	"spell.desc.poison_ball": "Throw out a ball of poison, dealing [calc:poisonball] §5☀ Chaos§7 Damage",
-	"spell.desc.poison_cloud": "Erupt with poisonous gas, dealing [calc:poison_cloud] §5☀ Chaos§7 Damage to nearby enemies.",
-	"spell.desc.poison_trap": "Throw out a trap that stays on the ground and activates when an enemy approaches to deal [calc:ranger_trap]§5☀ Chaos§7 Damage in area around itself.",
-	"spell.desc.power_chord": "Throw out a ball of music, dealing [calc:power_chord] §6☀ Physical§7 Damage",
-	"spell.desc.pull": "Pull enemies in area to you, dealing [calc:pull] §6☀ Physical§7 Damage and slowing them.",
-	"spell.desc.refresh": "Refreshes all your spell cooldowns by 1 minute.",
-	"spell.desc.rejuv_totem": "Summon a totem which restores [calc:totem_heal] health to allies around it.",
-	"spell.desc.resonance": "Throw out a ball of music, dealing [calc:power_chord] §6☀ Physical§7 Damage and causing an explosion if the 2nd projectile hits too.",
-	"spell.desc.return_summons": "Summons your pets and heals them for [calc:healing_aura] health",
-	"spell.desc.shooting_star": "Shoots a star that heals allies for [calc:shooting_star] health on hit.",
-	"spell.desc.shred": "Slash all nearby enemies, dealing [calc:shred] §6☀ Physical§7 Damage damage and reducing their defenses.",
-	"spell.desc.smoke_bomb": "Throw out a smoke bomb, blinding enemies and reducing threat.",
-	"spell.desc.song_of_perseverance": "Give a stack of Perseverance to all allies around you.",
-	"spell.desc.song_of_valor": "Give a stack of Valor to all allies around you.",
-	"spell.desc.song_of_vigor": "Give a stack of Vigor to all allies around you.",
-	"spell.desc.summon_cold_golem": "Summon a Golem to aid you in combat. Sometimes casts an AOE spell",
-	"spell.desc.summon_fire_golem": "Summon a Golem to aid you in combat. Sometimes casts an AOE spell",
-	"spell.desc.summon_lightning_golem": "Summon a Golem to aid you in combat. Sometimes casts an AOE spell",
-	"spell.desc.summon_skeleton_army": "Summons many skeletons for a short duration",
-	"spell.desc.summon_spirit_wolf": "Summon a Spirit Wolf to aid you in combat.",
-	"spell.desc.summon_zombie": "Summon a Pet Zombie, don't worry, it's cute!",
-	"spell.desc.taunt": "Shout, making enemies nearby want to attack you. Generates [calc:taunt] threat.",
-	"spell.desc.teleport": "Teleport yourself in the direction you're looking at.",
-	"spell.desc.the_hunt": "Gain Night vision and set all enemies around you to glow.",
-	"spell.desc.thorn_bush": "Summon a thorny bush that deals [calc:thorn_bush]§5☀ Chaos§7 Damage every second.",
-	"spell.desc.tidal_strike": "Strike enemies in front of you for [calc:tidal_strike] §b☀ Cold§7 Damage",
-	"spell.desc.undying_will": "Gives buff to self.",
-	"spell.desc.vamp_blood": "Gives effect to nearby allies.",
-	"spell.desc.whirlwind": "Strike enemies around you for [calc:whirlwind] §c☀ Fire§7 Damage. Scales with attack speed.",
-	"spell.desc.wish": "Heal allies around you for [calc:healing_aura] health",
-
-"_comment": " [CATEGORY]: SPELLS - DESCRIPTIONS"
+"_comment": " [CATEGORY]: STATS - DESCRIPTIONS"
 
 
 }
