--- a/src/main/resources/assets/mmorpg/lang/manual.json
+++ b/src/main/resources/assets/mmorpg/lang/manual.json
@@ -88,6 +88,7 @@
 "effect.mmorpg.anti_wither": "Anti Wither",
 "effect.mmorpg.anti_poison": "Anti Poison",
 "effect.mmorpg.scroll_buff": "Scroll Buff",
+"effect.mmorpg.instant_arrows": "Instant Arrows",
 
 
 "item.mmorpg.loot_crate.common": "Common Item Loot Crate",
