--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -1293,6 +1293,7 @@
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
 	"mmorpg.stat.intelligence": "Intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
+	"mmorpg.stat.leech_per_sec": "Total Leech Per Second",
 	"mmorpg.stat.lifesteal": "Lifesteal",
 	"mmorpg.stat.lightning_any_wep_damage": "Lightning Weapon Damage",
 	"mmorpg.stat.lightning_dmg_when_target_low_hp": "§7Execute targets bellow 30% health, dealing §a[VAL1]§7% increased  §e☀ Lightning§7",
@@ -1681,6 +1682,7 @@
 	"mmorpg.stat_desc.int_dmg_received": "Magic damage are mage spells, like fireball.",
 	"mmorpg.stat_desc.intelligence": "Determines your total: Mana, Mana Regen, Magic Shield",
 	"mmorpg.stat_desc.jewel_socket": "Allows you to socket more jewels",
+	"mmorpg.stat_desc.leech_per_sec": "Your leech/resource on hits are capped to x% per second, this stat increases that.",
 	"mmorpg.stat_desc.lifesteal": "Restore % of damage as health.",
 	"mmorpg.stat_desc.lightning_dmg_when_target_low_hp": "Low hp is 30% or less.",
 	"mmorpg.stat_desc.lightning_dot_damage": "Fire damage over time increases damage of burn, for example.",
