(zh_cn)Localized Content Optimization

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -1082,7 +1082,7 @@
 	"mmorpg.stat.all_penetration": "全穿透",
 	"mmorpg.stat.all_physical_damage": "物理伤害",
 	"mmorpg.stat.all_resist": "全抗性",
-	"mmorpg.stat.all_vuln_crit": "§7所有伤害必定暴击你。",
+	"mmorpg.stat.all_vuln_crit": "§7所有伤害必定暴击。",
 	"mmorpg.stat.all_water_damage": "冰霜伤害",
 	"mmorpg.stat.area_cdr": "范围法术冷却减少",
 	"mmorpg.stat.area_dmg": "范围伤害",
