--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -174,3 +174,6 @@ v5.0.4
 
 - the spell's tags are now shown on its tooltip, this way you will know if certain stats apply to it.
 For example you can't increase the radius of a spell that isn't tagged as area. Area damage won't work on it either.
+
+- added chinese translation file
+
