--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -177,3 +177,4 @@ For example you can't increase the radius of a spell that isn't tagged as area. 
 
 - added chinese translation file
 
+- added new item, soul cleaner. This removes the stats on an item but preserves the item, with this and the soul extractor, you can keep using your favourite modded gear.
