--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -140,6 +140,13 @@
 	"mmorpg.mob_affix.vampire": "§c❁",
 	"mmorpg.mob_affix.water_mob_affix": "§b☀",
 	"mmorpg.mob_affix.winter": "§b☀",
+	"mmorpg.profession.alchemy": "Alchemy",
+	"mmorpg.profession.cooking": "Cooking",
+	"mmorpg.profession.enchanting": "Enchanting",
+	"mmorpg.profession.farming": "Farming",
+	"mmorpg.profession.husbandry": "Husbandry",
+	"mmorpg.profession.mining": "Mining",
+	"mmorpg.profession.salvaging": "Salvaging",
 	"item.mmorpg.backpack.0": "§7Common Backpack",
 	"item.mmorpg.backpack.1": "§aUncommon Backpack",
 	"item.mmorpg.backpack.2": "§bRare Backpack",
@@ -265,6 +272,12 @@
 
 "_comment": " [CATEGORY]: SPELLS - NAMES",
 
+	"": "mmorpg.asc_class.ranger",
+	"elementalist": "mmorpg.asc_class.elementalist",
+	"paladin": "mmorpg.asc_class.paladin",
+	"ranger": "mmorpg.asc_class.ranger",
+	"summoner": "mmorpg.asc_class.summoner",
+	"warlock": "mmorpg.asc_class.warlock",
 	"mmorpg.aura.armor": "Armor Aura",
 	"mmorpg.aura.chaos_ailment": "Decree of Chaos Aura",
 	"mmorpg.aura.chaos_damage": "Chaos Damage Aura",
@@ -517,20 +530,6 @@
 "_comment": " [CATEGORY]: RARITIES - NAMES",
 
 
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 
 	"effect.mmorpg.beneficial.10": "Vigor",
@@ -562,6 +561,28 @@
 	"mmorpg.ailment.poison": "Poison",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"mmorpg.currency.orb_of_linking": "Orb of Linking",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -785,7 +806,7 @@
 	"mmorpg.stat.defensive_eff_duration": "§7§a[VAL1]§7% to duration of Defensive effects on you.",
 	"mmorpg.stat.dex_dmg": "Ranged Damage",
 	"mmorpg.stat.dex_dmg_received": "Ranged Damage Received",
-	"mmorpg.stat.dexterity": "Dexterity",
+	"mmorpg.stat.dexterity": "dexterity",
 	"mmorpg.stat.dmg_received": "Damage Received",
 	"mmorpg.stat.dmg_taken_to_mana": "Damage Taken to Mana",
 	"mmorpg.stat.dmg_to_living": "Damage To Living",
@@ -890,7 +911,7 @@
 	"mmorpg.stat.increased_quantity": "Item Find",
 	"mmorpg.stat.int_dmg": "Spell Damage",
 	"mmorpg.stat.int_dmg_received": "Spell Damage Received",
-	"mmorpg.stat.intelligence": "Intelligence",
+	"mmorpg.stat.intelligence": "intelligence",
 	"mmorpg.stat.jewel_socket": "Jewel Sockets",
 	"mmorpg.stat.leech_per_sec": "Total Leech Per Second",
 	"mmorpg.stat.lifesteal": "Lifesteal",
@@ -937,6 +958,7 @@
 	"mmorpg.stat.non_crit_damage": "Non Critical Damage",
 	"mmorpg.stat.offensive_eff_dur_u_cast": "Offensive Effect Duration",
 	"mmorpg.stat.offensive_eff_duration": "§7§a[VAL1]§7% to duration of Offensive effects on you.",
+	"mmorpg.stat.out_of_combat_regen": "Out of Combat Regen",
 	"mmorpg.stat.phys_to_all": "Physical to All Damage",
 	"mmorpg.stat.phys_to_chaos": "Physical to Chaos Damage",
 	"mmorpg.stat.phys_to_elemental": "Physical to Elemental Damage",
@@ -999,7 +1021,7 @@
 	"mmorpg.stat.staff_spell_spell_dmg": "Staff Spell Damage",
 	"mmorpg.stat.str_dmg": "Melee Damage",
 	"mmorpg.stat.str_dmg_received": "Melee Damage Received",
-	"mmorpg.stat.strength": "Strength",
+	"mmorpg.stat.strength": "strength",
 	"mmorpg.stat.summon_cdr": "Summon Spell Cooldown Reduction",
 	"mmorpg.stat.summon_damage": "Summon Damage",
 	"mmorpg.stat.summon_duration": "Summon Duration",
@@ -1149,6 +1171,7 @@
 	"mmorpg.chat.favor_up": "§aAs a result of your achievements, your Favor has risen to %1$s!",
 	"mmorpg.chat.not_enough_experience": "Not enough experience",
 	"mmorpg.chat.not_owner": "§cYou are not the owner of this Station.",
+	"mmorpg.chat.profession_level_up": "Your %1$s profession has increased to level %2$s!",
 	"mmorpg.chat.too_low_level": "Your level is too low.",
 	"mmorpg.chat.too_many_buffs": "You can't have that many buffs.",
 
@@ -1300,6 +1323,7 @@
 	"mmorpg.stat_desc.move_speed": "Increase vanilla attribute.",
 	"mmorpg.stat_desc.movement_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.non_crit_damage": "If not a Critical, multiply by x",
+	"mmorpg.stat_desc.out_of_combat_regen": "Increases your out of combat regeneration",
 	"mmorpg.stat_desc.physical_dot_damage": "Fire damage over time increases damage of burn, for example.",
 	"mmorpg.stat_desc.piercing_projectiles": "Makes spell pierce enemies and keep on",
 	"mmorpg.stat_desc.poison_chance": "Chance to Cause the Ailment on hit. Maximum is 100%, Ailment strength is affected by the total damage dealt and all ailments accumulate, some may have caps.",
