aura cost > aura capacity

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,193 +1,4 @@
-V5.0.0 (1.20.1 Port and back on Forge!)
-
-TALENTS UPDATE:
-- are back!
-
-DUNGEON UPDATE:
-- are back!
-- PLUS new dungeons made by @Eclipse/@Serphentin!
-
-GEAR UPDATE:
-- gear now has local stats. These stats directly add to the base stat of the gear, meaning a good affix combination is way more important to maximize defenses and damage.
-- elemental resistances are now way more important but also easier to get. As a rule of thumb, you should be dying a lot if you aren't res capped
-- gear now drops as actual items again! Although gear souls will still ocasionally drop so you can stick them into any modded items you want, as long as the auto compatibility code detects it (should work with most armor)
-
-SKILL GEM SYSTEM:
- - we're back to no class restrictions!
- - each spell can be supported by up to 5 support gems depending on amount of gem links
- - "classes" will still exist as Ascendancy classes
- 
-QOL CHANGES:
-- backpacks are now innate to characters
-- most spells are instant cast now
-- most stations removed, they are now items
-- you can click rarity stones to repair your gear
-- you can click currencies to craft gear
-- you can click a salvage hammer to salvage gear
- 
-SUMMONS:
- - summoned pet spells implemented
- - you can now be a summoner of: golems, undead or beasts! 
- - summoned pets spend your energy to attack, but their damage scales with you too 
- 
-JEWELS
-- new feature, talent tree gives you jewel socket slots, which you can socket the jewels in
-- remember you can use jewels to help you cap your resistances
-- you might want to figure out how to get all the unique jewels that exist, some are very powerful
-  
-AURAS:
- - most "boring" buff spells will now be auras instead, permanently activate on you if you have enough spirit
- - you can socket more auras by having high enough aura cost reduction stat (look for it on talent tree or some unique items)
-
-BALANCE:
-- mobs will now all have some of their phys dmg as bonus elemental damage
-- newbies will now get 50% > 25% > 0% bonus elemental resists (lvl 1 > lvl 25> lvl 50 >)
-- players will be expected to cap their elemental resists to survive
-
-AILMENTS:
- - several effects like chill, burn etc have been replaced with Ailments.
- - ailments are special stackable effects that are the main focus of each specific elements
- - Those are: Burn, Freeze, Electrify, Poison, Bleed.
- - DOT Ailments can now be stacked infinitely and each have separate duration
- - Ailment damage is based on base damage of the hit now and scales damage on its own
-
-MISC STUFF:
- - % stats no longer scale with levels, now they use the tiered affix system: higher tier affixes require a higher item level 
- - stats were simplified. Multi is now "More" and it's multiplicative with every modifier. Increased is now Extra (this is for giving % increase to % stats.. i try not to use this if not needed).
- - mob level now always scales to nearest player, and modpacks are encouraged to make valuable dimensions higher levels
- - max level will be 100 again
- - backacks are no longer items, but also they are! Ahem, you can now access backpacks with your main hub, but you can also socket in backpack items (think of MNS gear items) that decide how many slots your backpacks have.
- - meteor spells should now no longer be useless in tight spaces
- - players are now teamed by default and all friendly spells should work and pvp damage should be off
- - weapon types now have a dmg multiplier that only really affects basic attacks. So bows will deal way more damage (and cost way more energy), because they attack so slow
- 
-v5.0.1
- - fixed talent infinite allocate bug
- - mobs with weapons now only have 50% of their weapon damage added by default (you shouldn't be getting 1 shotted by iron sword mobs now)
- - fixed skill gems auto salvage not working 
- - magic shield should take enviromental dmg now
- - tweaked regens
- - fixed uniques not being able to drop ever
- - leech is now capped to 10% of max hp/mana etc per second
- - backpacks are now crafted instead of dropped
- - gear souls can now be right clicked to create a default item with stats, if you dont have anything to apply it on
- - backpacks wont hold invalid items anymore
- 
-v5.0.2
- - fixed level of loot in map chests
- 
- - stat souls can now be put into gear backpacks
- 
- - spells now get lower mana cost if they are higher rarity, instead of higher mana cost.
- 
- - summons shouldnt attack bats etc now, if they aren't attacking something you want them to attack, remember the chilling touch spell
- 
- - lowered map droprate, maps now cant drop from other maps by default. This should hopefully encourage some overworld exploration
- 
- - new spells: chain lightning, boomerang, arrow barrage, frozen orb
-
-v5.0.3
-
-- New Mechanic: Harvest! Dungeons can sometimes spawn a portal leading to the harvest, where you will kill mobs that sometimes drop locked chests.
-Those chests can be opened with a key, but how do you actually get the key? Maybe these weird seeds have something to do with it..
-
- - New dungeon tileset by @Eclipse/@Serphentin: bastion!
- 
- - New dungeon tileset by @TheMichu: sewers!
- 
- - new currency: orb of quality, increases base stat of gears by up to 20%
- 
- - fixed vanilla attacks doing damage
- 
- - fixed players not being able to teleport correctly outside map in multiplayer
- 
- - attacking with nothing now uses basic attacks
- 
- - dungeon dimension now uses a dungeon biome
- 
- - new spell: arrow totem
- 
- - new spell: chaos totem
- 
- - spells should now hit more consistently (used an int in aoe selector instead of float)
- 
- - new support gems: increased healing, totem damage, minor cooldown, primed totems, immediate care
- 
- - new currency items
- 
- - runes now have stats again and can be inserted into sockets! (max 1 per item)
- Runes when inserted have a random stat value, higher values are very rare
- You can insert rune many times to try hit a high value.
- 
- - added experimental way of removing the wall-spell cheese strategy with aoe
- 
- - mob damage balanced
- 
- - fixed aoe stats not working
- 
- - new spell: resonance
- 
- - hymns/songs now boost song damage, and with the additional spell, a physical/bard caster might be possible to play as!
- 
- - added experimental way to unstuck mobs from walls in maps
- 
- - new spell: meteor arrow
- 
- - new spell: gale wind
- 
- - new spell: quickdraw! This one will probably be a staple of every ranger, as it allows you to instantly fire off bows!
- 
- - you can now craft soul extracting items that extract the stats from gear, and then you can place it on another empty gear piece (modded gear, expensive gear etc)
- 
- - re-introduced mob rarities
- 
- - re implemented neat gui with MNS values
- 
-v5.0.4
-
-- New dungeon tileset by @TheMichu: Pyramid!
-
-- added craftable potions!
-
-- add hotbar toggle config and keybind 
-
-- tweaked gui
-
-- added tomes and totems as offhand types like shields, these provide magic shield or dodge and some regeneration stats
-
-- reaching lvl 75 now reduces all resists by -25%
-
-- dying in a map now puts a cooldown to the teleportation with the map device (this cd is on you, not the map device itself)
-- map cooldown increases with each death
-
-- you can craft death ticket items to avoid this death cooldown penalty
-
-- every subsequent death increases the rarity of death tickets needed to use to restore penalty
-
-- ticket cost resets every time you start a map yourself (can't find a better way right now)
-
-- death favor added. If you die you lose favor, if you loot chests you gain favor. You can also regain favor slowly over time if it's below a certain point.
-
-- added new supp gems: LMP, GMP, Barrage versions, faster projectiles
-
-- added leech cap stat, and base leech is now 5% total hp etc capped per second
-
-- added remaining spirit tooltip to aura gems
-
-- the spell's tags are now shown on its tooltip, this way you will know if certain stats apply to it.
-For example you can't increase the radius of a spell that isn't tagged as area. Area damage won't work on it either.
-
-- added chinese translation file
-
-- added new item, soul cleaner. This removes the stats on an item but preserves the item, with this and the soul extractor, you can keep using your favourite modded gear.
-
-- tried to optimize lang file a bit, removed some unused words
-
-- attempt to fix mod impcompatibility with mods like apostesis that have similar datapack registry folders like "affixes" by adding a modid prefix to all my datapack json folders
-
-* This update is released a bit early to fix the incompatibility issues, might be more unstable in other areas!
-
-v.5.0.5
+v.5.1.0
 
 - added more types of loot chests
 
@@ -201,3 +12,5 @@ This should ensure spells with any type of stat scalings can't become too op, bu
 - added XP debt system. Dying now adds a stacking xp gain penalty that reduces xp gain by 50% until it's exhausted, in the future i will probably add items that remove the xp debt in some other way, like crafting.
 
 - added experimental in combat regeneration decrease, will see how it feels and if it's right for the mod
+
+- aura cost reduction > aura capacity, instead of reducing aura cost, you will now gain aura capacity with stats. This is intended to simplify the stat
